--- a/src/pages/Onboarding/Steps/StepCreateAuthors.css
+++ b/src/pages/Onboarding/Steps/StepCreateAuthors.css
@@ -4,6 +4,7 @@
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
+  padding-top: 0px;
   flex-direction: column;
 }
 
@@ -48,6 +49,7 @@
 
 .tab-pane {
   padding: 2rem;
+  padding-top: 0px;
 }
 
 /* Update existing styles */
