--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -337,7 +337,7 @@
 .ledger-title {
   font-size: 1.8rem;
   font-weight: 700;
-  color: #111827;
+  color: #ffffff;
   margin: 0.5rem 0;
   display: flex;
   flex-wrap: wrap;
